Поиск заметок по тексту (#49)
* added search notes by text

* added tests; updated swagger

* fix lint err
